Total view and connection approve

--- a/src/app/cards/[id]/carddetail.module.css
+++ b/src/app/cards/[id]/carddetail.module.css
@@ -610,6 +610,7 @@
 .settingsDescription {
   font-size: 0.875rem;
   color: var(--color-text-light);
+  text-align: left !important;
 }
 
 .settingsControl {
